<resources>
    <string name="app_name">My App</string>
    <string name="username">Email or username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_welcome">Welcome back!</string>
    <string name="signup">Don\'t have an account? Sign up</string>
    <string name="signup_createAcc">Create your account</string>
    <string name="signup_signup">Sign Up</string>
    <string name="splash_message">Welcome...</string>
    <string name="signup_first_name">First name</string>-->
    <string name="signup_last_name">Last name</string>
    <string name="signup_email">Email</string>
    <string name="signup_password">Password</string>
    <string name="signup_confirm_pass">Confirm password</string>
    <string name="signup_login">Already have an account? Login</string>
    <string name="forgot_pass">Forgot password?</string>

    <string name="lang">English/Nepali</string>
    <string name="option_profile">Profile</string>
    <string name="option_settings">Settings</string>
    <string name="option_help">Help</string>
    <string name="option_about">About</string>
    <string name="user_image">user image</string>

    <array name="language">
        <item>English</item>
        <item>Nepali</item>
    </array>


</resources>