<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:padding="20dp"
    android:background="@color/gray"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/signup_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/account" />

    <TextView
        android:id="@+id/tvSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/signup_createAcc"
        android:gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:layout_below="@+id/signup_image"
        />

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="182dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvSignup"
        android:layout_marginTop="45dp"
        android:background="@drawable/border"
        android:hint="@string/signup_first_name"
        android:backgroundTint="@color/offwhite"/>

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="210dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvSignup"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="45dp"
        android:layout_toRightOf="@+id/etFirstName"
        android:background="@drawable/border"
        android:hint="@string/signup_last_name"
        android:backgroundTint="@color/offwhite"/>

    <EditText
        android:id="@+id/etSignupEmail"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_email"
        android:padding="8dp"
        android:background="@drawable/border"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/offwhite"
        />
    <EditText
        android:id="@+id/etSignupPassword"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/etSignupEmail"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_password"
        android:padding="8dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:backgroundTint="@color/offwhite"
        />

    <EditText
        android:id="@+id/etSignupConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_below="@+id/etSignupPassword"
        android:layout_marginTop="20dp"
        android:hint="@string/signup_confirm_pass"
        android:padding="8dp"
        android:background="@drawable/border"
        android:inputType="textPassword"
        android:backgroundTint="@color/offwhite"
        />
    <Button
        android:id="@+id/signupBtn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/signup_signup"
        android:textColor="@color/white"
        android:padding="8dp"
        android:textSize="15dp"
        android:layout_below="@id/etSignupConfirmPass"
        android:onClick="forwardLogin"
        />


    <TextView
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/signup_login"
        android:padding="8dp"
        android:textSize="13dp"
        android:layout_below="@id/signupBtn"
        android:layout_marginTop="10dp"
        android:textColor="@color/purple"
        android:gravity="center_horizontal"
        android:autoLink="web"
        />







</RelativeLayout>

