<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/gray"
    android:padding="30dp">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/image"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/account"
        android:layout_gravity="center"
        android:contentDescription="@string/user_image"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@color/purple"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:textStyle="bold"/>


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/offwhite"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etPassword"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/offwhite"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:padding="8dp"
        android:onClick="forward"
        android:textSize="15sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/forgot_pass"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View
        android:layout_width="135dp"
        android:layout_height="1dp"
        android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="or"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            />
        <View
            android:layout_width="160dp"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"/>
    </LinearLayout>


    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:onClick="forwardSignup"
        android:padding="8dp"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
         />


</LinearLayout>